Finalize distance slice results

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -38,6 +38,10 @@
     "from plotting_tools import pcolorfast_custom\n",
     "from plotting_tools import save_fig\n",
     "\n",
+    "linestyles = {\"measured\": \"-\", \"theo\": \":\", \"theo_corr\": \"-.\"}\n",
+    "colors = {\"measured\": \"C0\", \"theo\": \"black\", \"theo_corr\": \"black\"}\n",
+    "keys = {\"measured\": \"measured\", \"theo\": \"theo, vertical\", \"theo_corr\": \"theoretical\"}\n",
+    "\n",
     "def plot_plositions(row, min_time=None, max_time=None, max_dist=None):\n",
     "    positions_cm = row.positions[:, :3] * 100\n",
     "    fig, axs = plt.subplots(1, 3) \n",
@@ -132,15 +136,16 @@
     "    ax_df.set_ylabel('frequency [Hz]')\n",
     "    return fig_df, ax_df\n",
     "\n",
-    "def change_order(axs_all, mean_distances, xlabel=\"distance\", unit=\"cm\"):\n",
+    "def change_order(axs_all, mean_distances, xlabel=\"distance\", unit=\"cm\", ylabel=\"probability [-]\", title=True):\n",
     "    sorted_idx = np.argsort(mean_distances)\n",
     "    positions = [ax.get_position() for ax in axs_all]\n",
     "    for i, idx in enumerate(sorted_idx):\n",
     "        axs_all[idx].set_position(positions[i])\n",
-    "        axs_all[idx].set_title(f\"{mean_distances[idx]:.0f}{unit}\")\n",
+    "        if title:\n",
+    "            axs_all[idx].set_title(f\"{mean_distances[idx]:.0f}{unit}\")\n",
     "    [ax.get_yaxis().set_visible(False) for ax in axs_all[sorted_idx[1:]]]\n",
     "    axs_all[sorted_idx[len(sorted_idx)//2]].set_xlabel(f\"{xlabel} [{unit}]\")\n",
-    "    axs_all[sorted_idx[0]].set_ylabel(\"probability [-]\")\n",
+    "    axs_all[sorted_idx[0]].set_ylabel(ylabel)\n",
     "    axs_all[sorted_idx[-1]].legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
     "    return axs_all"
    ]
@@ -241,7 +246,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -316,15 +321,12 @@
     "# spec_masked, freqs_masked = data_collector.fill_from_row()\n",
     "from copy import deepcopy\n",
     "from data_collector import DataCollector\n",
-    "from estimators import DistanceEstimator\n",
+    "from estimators import DistanceEstimator, get_estimate\n",
     "from inference import eps_normalize\n",
     "from simulation import get_freq_slice_theory\n",
     "\n",
     "plot_raw = False\n",
     "\n",
-    "linestyles = {\"measured\": \"-\", \"theo\": \":\", \"theo_corr\": \"-.\"}\n",
-    "colors = {\"measured\": \"C0\", \"theo\": \"black\", \"theo_corr\": \"black\"}\n",
-    "keys = {\"measured\": \"measured\", \"theo\": \"theo, vertical\", \"theo_corr\": \"theo, moving\"}\n",
     "eps = 1e-5  # for plotting only\n",
     "\n",
     "max_plot_distance = 50\n",
@@ -346,7 +348,9 @@
     "\n",
     "fig_df, ax_df = plot_df(distance_range)\n",
     "fig_all, axs_all = plt.subplots(1, 6)\n",
+    "fig_res, axs_res = plt.subplots(1, 6, sharex=True)\n",
     "fig_all.set_size_inches(15, 3)\n",
+    "fig_res.set_size_inches(15, 3)\n",
     "mean_distances = []\n",
     "\n",
     "count = 0\n",
@@ -536,9 +540,24 @@
     "                            color=f\"C{plot_idx}\",\n",
     "                    )\n",
     "                    \n",
+    "                    d = get_estimate(distance_total*1e2, proba_total)\n",
+    "                    axs_res[plot_idx].axvline(\n",
+    "                        d,\n",
+    "                        label=keys[key],\n",
+    "                        ls=linestyles[key],\n",
+    "                        color=f\"C{plot_idx}\",\n",
+    "                    )\n",
+    "                    \n",
     "            if mean_distance < max_plot_distance:\n",
     "                axs_all[plot_idx].axvline(mean_distance, color=\"k\", ls=\":\", label=\"mean distance\")\n",
     "                axs_all[plot_idx].set_yscale(\"log\")\n",
+    "                \n",
+    "                axs_res[plot_idx].axvline(mean_distance, color=\"k\", ls=\":\", label=\"mean distance\")\n",
+    "                axs_res[plot_idx].scatter(\n",
+    "                    distance_corr, freqs, color=f\"C{plot_idx}\"\n",
+    "                )\n",
+    "                axs_res[plot_idx].set_ylim(3000, 5000)\n",
+    "                \n",
     "                mean_distances.append(mean_distance)\n",
     "                plot_idx += 1\n",
     "\n",
@@ -561,9 +580,11 @@
     "\n",
     "# sort subplots according to distance\n",
     "axs_all = change_order(axs_all, mean_distances)\n",
+    "axs_res = change_order(axs_res, mean_distances, ylabel='frequency [Hz]', title=False)\n",
     "\n",
     "save_fig(fig_df, f\"plots/experiments/{exp_name}_all_df.png\", extension=\"png\")\n",
-    "save_fig(fig_all, f\"plots/experiments/{exp_name}_mics{chosen_mics}_all.png\", extension=\"png\")"
+    "save_fig(fig_all, f\"plots/experiments/{exp_name}_mics{chosen_mics}_all.png\", extension=\"png\")\n",
+    "save_fig(fig_res, f\"plots/experiments/{exp_name}_mics{chosen_mics}_res.png\", extension=\"png\")"
    ]
   },
   {
@@ -572,8 +593,7 @@
    "source": [
     "# Notes for this experiment\n",
     "\n",
-    "- understand peaking behavior\n",
-    "- apply optimization algorithm including relative distance measurements\n",
+    "- understand why 21cm is missing one measurement\n",
     "- do normalization over all mics rater than per-mic "
    ]
   },
@@ -600,7 +620,7 @@
     "try:\n",
     "    df_total = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
-    "except:\n",
+    "except Exception as e:\n",
     "    answer = input('Run wall_analysis.py to parse experiments? (y/[n])') or 'n'\n",
     "    if answer == 'y':\n",
     "        df_total = parse_experiments(exp_name)\n",
@@ -752,11 +772,11 @@
     "from inference import get_approach_angle_fft\n",
     "from data_collector import DataCollector\n",
     "from estimators import AngleEstimator, get_estimate\n",
+    "from simulation import get_dist_slice_theory\n",
     "\n",
     "plot_raw = False\n",
     "\n",
     "n_mics = 4\n",
-    "\n",
     "\n",
     "appendices = [\"_1\", \"_5\"]#, \"_fast2\", \"_fast4\"]\n",
     "\n",
@@ -764,6 +784,8 @@
     "    \n",
     "fig_all, axs_all = plt.subplots(1, 6) # 10\n",
     "fig_all.set_size_inches(15, 3)\n",
+    "fig_res, axs_res = plt.subplots(1, 6, sharex=True) # 10\n",
+    "fig_res.set_size_inches(15, 3)\n",
     "    \n",
     "fig_df, ax_df = plot_df(distance_range=[7, 70], freq_range=[2000, 4000])\n",
     "\n",
@@ -783,10 +805,18 @@
     "    if not row.appendix in appendices:\n",
     "        continue\n",
     "        \n",
+    "        \n",
+    "    azimuth_deg = starting_positions[row.appendix][3]\n",
+    "    print(azimuth_deg)\n",
+    "        \n",
     "    start_i = 0\n",
     "    \n",
     "    gt_angle = get_gt_angle(row)\n",
-    "    angle_estimator = AngleEstimator()\n",
+    "    \n",
+    "    angle_estimators = {\n",
+    "        'measured': AngleEstimator(),\n",
+    "        'theo_corr': AngleEstimator()\n",
+    "    }\n",
     "    data_collector = DataCollector(exp_name=exp_name)\n",
     "    \n",
     "    for i in range(row.stft.shape[0]):\n",
@@ -806,11 +836,13 @@
     "                print(f'skipping last measurement, cause only {len(distances)}')\n",
     "                break\n",
     "                \n",
+    "            freq = np.mean(freqs)\n",
+    "                \n",
     "            print(f'positions from {start_i} to {i}')\n",
     "            positions = row.positions[start_i:i, :]\n",
     "            positions_corr = get_corrected_positions(row.appendix, positions)\n",
     "            ds = -positions_corr[:, 1]\n",
-    "            ax_df.scatter(ds, np.full(len(ds), np.mean(freqs)), color=f'C{slice_idx}')\n",
+    "            ax_df.scatter(ds, np.full(len(ds), freq), color=f'C{slice_idx}')\n",
     "            \n",
     "            mean_angle = get_average_angle(positions_corr)\n",
     "            mean_angles.append(mean_angle)\n",
@@ -821,31 +853,48 @@
     "                           positions_corr[:, 1], \n",
     "                           color=f'C{slice_idx}',\n",
     "                           s=10)\n",
+    "            \n",
+    "            positions_here = positions_corr - positions_corr[0, :]\n",
+    "            axs_res[slice_idx].scatter(positions_here[:, 0], \n",
+    "                positions_here[:, 1], \n",
+    "                color=f'C{slice_idx}',\n",
+    "                s=10\n",
+    "            )\n",
     "\n",
     "            if plot_raw:\n",
     "                fig, axs = plt.subplots(2, n_mics, sharey='row')\n",
     "                fig.set_size_inches(10, 7)\n",
     "                \n",
     "            for i_mic in range(n_mics):\n",
+    "                \n",
+    "                d_theo_corr = get_dist_slice_theory(\n",
+    "                    freq, ds, azimuth_deg=azimuth_deg, chosen_mics=[i_mic]\n",
+    "                )[:, 0]\n",
     "                d_slice = d_slices[i_mic]\n",
+    "                \n",
     "                if plot_raw:\n",
     "                    axs[0, i_mic].set_title(f'mic{i_mic}')\n",
     "                    axs[0, i_mic].scatter(distances, d_slice, color='C0')\n",
     "                    axs[0, i_mic].set_xlabel(f\"relative distance [cm]\")\n",
     "                \n",
-    "                #d_slice -= np.mean(d_slice, axis=1)[None, :]\n",
     "                valid = ~np.isnan(d_slice)\n",
-    "                #print(distances[valid], d_slice[valid])\n",
     "                angles, proba = get_approach_angle_fft(\n",
     "                    d_slice=d_slice[valid],\n",
-    "                    frequency=np.mean(freqs),\n",
+    "                    frequency=freq,\n",
     "                    relative_distances_cm=distances[valid],\n",
     "                    reduced=True,\n",
     "                    bayes=True\n",
     "                )\n",
+    "                angle_estimators['measured'].add_distribution(angles, proba, mic_idx, freq)\n",
     "                \n",
-    "                angle_estimator.add_distribution(angles, proba, mic_idx, np.mean(freqs))\n",
-    "                \n",
+    "                angles_theo_corr, proba_theo_corr = get_approach_angle_fft(\n",
+    "                    d_slice=d_theo_corr,\n",
+    "                    frequency=freq,\n",
+    "                    relative_distances_cm=distances,\n",
+    "                    reduced=True,\n",
+    "                    bayes=True\n",
+    "                )\n",
+    "                angle_estimators['theo_corr'].add_distribution(angles_theo_corr, proba_theo_corr, mic_idx, np.mean(freqs))\n",
     "                #EPS = 1e-10\n",
     "                #proba = (proba - np.min(proba) + EPS) / (np.max(proba) - np.min(proba) + EPS)\n",
     "                \n",
@@ -856,32 +905,36 @@
     "            if plot_raw:\n",
     "                axs[0, 0].set_ylabel(f\"magnitude{row.appendix}\")\n",
     "                axs[1, 0].set_ylabel(f\"probability{row.appendix}\")\n",
+    "                \n",
     "            \n",
-    "            angles, probs = angle_estimator.get_angle_distribution()\n",
-    "            est_angle = get_estimate(angles, probs)\n",
-    "            print(mean_angle, gt_angle, est_angle)\n",
-    "            \n",
-    "            l=10\n",
-    "            ax_pos.arrow(\n",
-    "                *positions_corr[0, :2],\n",
-    "                dx=-l*np.cos(est_angle/180*np.pi),\n",
-    "                dy=l*np.sin(est_angle/180*np.pi),\n",
-    "                color='black',#f'C{slice_idx}',\n",
-    "                head_width=1\n",
+    "            l=20\n",
+    "            axs_res[slice_idx].plot(\n",
+    "                [0, -l*np.cos(mean_angle/180*np.pi)],\n",
+    "                [0, l*np.sin(mean_angle/180*np.pi)],\n",
+    "                color='k',\n",
+    "                ls=':',\n",
+    "                label='mean angle'\n",
     "            )\n",
-    "            ax_pos.arrow(\n",
-    "                *positions_corr[0, :2],\n",
-    "                dx=-l*np.cos(mean_angle/180*np.pi),\n",
-    "                dy=l*np.sin(mean_angle/180*np.pi),\n",
-    "                color=f'C{slice_idx}',\n",
-    "                head_width=1\n",
-    "            )\n",
+    "            for key, angle_estimator in angle_estimators.items():\n",
+    "                angles, probs = angle_estimator.get_angle_distribution()\n",
+    "                est_angle = get_estimate(angles, probs)\n",
+    "                axs_all[slice_idx].plot(angles, probs, \n",
+    "                                        color=f'C{slice_idx}', \n",
+    "                                        label=keys[key], \n",
+    "                                        ls=linestyles[key])\n",
+    "\n",
+    "                axs_res[slice_idx].plot(\n",
+    "                    [0, -l*np.cos(est_angle/180*np.pi)], \n",
+    "                    [0, l*np.sin(est_angle/180*np.pi)],\n",
+    "                    color=f'C{slice_idx}',\n",
+    "                    ls=linestyles[key],\n",
+    "                    label=keys[key]\n",
+    "                )\n",
+    "                axs_res[slice_idx].axis('equal')\n",
     "            \n",
-    "            axs_all[slice_idx].plot(angles, probs, color=f'C{slice_idx}', label='measured')\n",
-    "            axs_all[slice_idx].axvline(mean_angle, color='k', ls=':')\n",
+    "            axs_all[slice_idx].axvline(mean_angle, color='k', ls=':', label='mean angle')\n",
     "            \n",
     "            slice_idx += 1\n",
-    "            \n",
     "            if plot_raw:\n",
     "                save_fig(fig, f'plots/experiments/{exp_name}{row.appendix}_slice{slice_idx}.png', extension='png')\n",
     "            start_i = i\n",
@@ -891,8 +944,10 @@
     "            data_collector.fill_from_signal(\n",
     "                signals_f, frequencies, distance_cm=position[1]*1e2, time=row.seconds[i]\n",
     "            )\n",
+    "ax_pos.axhline(0, color='k')\n",
     "            \n",
-    "axs_all = change_order(axs_all, mean_angles, xlabel='angle', unit='deg')"
+    "axs_all = change_order(axs_all, mean_angles, xlabel='angle', unit='deg')\n",
+    "axs_res = change_order(axs_res, mean_angles, xlabel='x', unit='cm', ylabel='y [xm]', title=False)"
    ]
   },
   {
@@ -900,7 +955,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
