Add plot saving

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -350,7 +350,7 @@
     "fig_all, axs_all = plt.subplots(1, 6)\n",
     "fig_res, axs_res = plt.subplots(1, 6, sharex=True)\n",
     "fig_all.set_size_inches(15, 3)\n",
-    "fig_res.set_size_inches(15, 3)\n",
+    "fig_res.set_size_inches(15, 2)\n",
     "mean_distances = []\n",
     "\n",
     "count = 0\n",
@@ -785,7 +785,7 @@
     "fig_all, axs_all = plt.subplots(1, 6) # 10\n",
     "fig_all.set_size_inches(15, 3)\n",
     "fig_res, axs_res = plt.subplots(1, 6, sharex=True) # 10\n",
-    "fig_res.set_size_inches(15, 3)\n",
+    "fig_res.set_size_inches(15, 2)\n",
     "    \n",
     "fig_df, ax_df = plot_df(distance_range=[7, 70], freq_range=[2000, 4000])\n",
     "\n",
@@ -864,6 +864,8 @@
     "            if plot_raw:\n",
     "                fig, axs = plt.subplots(2, n_mics, sharey='row')\n",
     "                fig.set_size_inches(10, 7)\n",
+    "            \n",
+    "            axs_all[slice_idx].axvline(mean_angle, color='k', ls=':', label='mean angle')\n",
     "                \n",
     "            for i_mic in range(n_mics):\n",
     "                \n",
@@ -922,6 +924,7 @@
     "                                        color=f'C{slice_idx}', \n",
     "                                        label=keys[key], \n",
     "                                        ls=linestyles[key])\n",
+    "                axs_all[slice_idx].set_yscale('log')\n",
     "\n",
     "                axs_res[slice_idx].plot(\n",
     "                    [0, -l*np.cos(est_angle/180*np.pi)], \n",
@@ -931,8 +934,9 @@
     "                    label=keys[key]\n",
     "                )\n",
     "                axs_res[slice_idx].axis('equal')\n",
-    "            \n",
-    "            axs_all[slice_idx].axvline(mean_angle, color='k', ls=':', label='mean angle')\n",
+    "                #from matplotlib.ticker import FormatStrFormatter\n",
+    "                #axs_res[slice_idx].yaxis.set_major_formatter(FormatStrFormatter('%2.3f'))\n",
+    "                #axs_all[slice_idx].yaxis.set_major_formatter(FormatStrFormatter('%05.3f'))\n",
     "            \n",
     "            slice_idx += 1\n",
     "            if plot_raw:\n",
@@ -947,7 +951,12 @@
     "ax_pos.axhline(0, color='k')\n",
     "            \n",
     "axs_all = change_order(axs_all, mean_angles, xlabel='angle', unit='deg')\n",
-    "axs_res = change_order(axs_res, mean_angles, xlabel='x', unit='cm', ylabel='y [xm]', title=False)"
+    "axs_res = change_order(axs_res, mean_angles, xlabel='x', unit='cm', ylabel='y [xm]', title=False)\n",
+    "\n",
+    "save_fig(fig_all, f'plots/experiments/{exp_name}_all.png', extension='png')\n",
+    "save_fig(fig_res, f'plots/experiments/{exp_name}_res.png', extension='png')\n",
+    "save_fig(fig_pos, f'plots/experiments/{exp_name}_pos.png', extension='png')\n",
+    "save_fig(fig_df,  f'plots/experiments/{exp_name}_df.png', extension='png')"
    ]
   },
   {
