Add gradients and more plots

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -232,7 +232,7 @@
     "ax_total.set_xlabel('x [cm]')\n",
     "ax_total.set_ylabel('y [cm]')\n",
     "ax_total.axhline(0, color='k', label='wall')\n",
-    "save_fig(fig_total, f'plots/experiments/{exp_name}_movement.png', extension='.png')"
+    "save_fig(fig_total, f'plots/experiments/{exp_name}_pos.png')"
    ]
   },
   {
@@ -261,7 +261,7 @@
     "for i_col, row in df_total.iterrows():\n",
     "    fig, ax = plot_audio(row, mic_idx=mic_idx)\n",
     "    ax.set_ylim([2800, 5000])\n",
-    "    save_fig(fig, f'plots/{exp_name}{row.appendix}_spec', extension='.png')"
+    "    #save_fig(fig, f'plots/experiments/{exp_name}{row.appendix}_spec')"
    ]
   },
   {
@@ -355,9 +355,9 @@
     "\n",
     "count = 0\n",
     "\n",
-    "chosen_mics = None #\n",
-    "#chosen_mics = [0] # mic pointing to wall\n",
-    "chosen_mics = [0, 1] # mics pointing to wall\n",
+    "#chosen_mics = None #\n",
+    "chosen_mics = [0] # mic pointing to wall\n",
+    "#chosen_mics = [0, 1] # mics pointing to wall\n",
     "#chosen_mics = [0, 1, 3]\n",
     "\n",
     "for i_row, row in df_total.iterrows():\n",
@@ -426,6 +426,7 @@
     "                    axs[0, i_mic].set_title(f\"mic{i_mic}\")\n",
     "\n",
     "            # treat measured data\n",
+    "            \n",
     "            for i_mic in range(f_slice.shape[0]):\n",
     "                dists, proba, diff = inf_machine.do_inference(\n",
     "                    mic_idx=i_mic, algorithm=algorithm, normalize=normalize\n",
@@ -582,9 +583,9 @@
     "axs_all = change_order(axs_all, mean_distances)\n",
     "axs_res = change_order(axs_res, mean_distances, ylabel='frequency [Hz]', title=False)\n",
     "\n",
-    "save_fig(fig_df, f\"plots/experiments/{exp_name}_all_df.png\", extension=\"png\")\n",
-    "save_fig(fig_all, f\"plots/experiments/{exp_name}_mics{chosen_mics}_all.png\", extension=\"png\")\n",
-    "save_fig(fig_res, f\"plots/experiments/{exp_name}_mics{chosen_mics}_res.png\", extension=\"png\")"
+    "save_fig(fig_df, f\"plots/experiments/{exp_name}_df.png\")#, extension=\"png\")\n",
+    "save_fig(fig_all, f\"plots/experiments/{exp_name}_mics{chosen_mics}_all.png\")#, extension=\"png\")\n",
+    "save_fig(fig_res, f\"plots/experiments/{exp_name}_mics{chosen_mics}_res.png\")#, extension=\"png\")"
    ]
   },
   {
@@ -780,8 +781,6 @@
     "\n",
     "appendices = [\"_1\", \"_5\"]#, \"_fast2\", \"_fast4\"]\n",
     "\n",
-    "fig_rel, ax_rel = plt.subplots()\n",
-    "    \n",
     "fig_all, axs_all = plt.subplots(1, 6) # 10\n",
     "fig_all.set_size_inches(15, 3)\n",
     "fig_res, axs_res = plt.subplots(1, 6, sharex=True) # 10\n",
@@ -846,8 +845,6 @@
     "            \n",
     "            mean_angle = get_average_angle(positions_corr)\n",
     "            mean_angles.append(mean_angle)\n",
-    "            \n",
-    "            ax_rel.scatter(distances, np.full(len(distances), mean_angle))\n",
     "            \n",
     "            ax_pos.scatter(positions_corr[:, 0], \n",
     "                           positions_corr[:, 1], \n",
@@ -953,10 +950,10 @@
     "axs_all = change_order(axs_all, mean_angles, xlabel='angle', unit='deg')\n",
     "axs_res = change_order(axs_res, mean_angles, xlabel='x', unit='cm', ylabel='y [xm]', title=False)\n",
     "\n",
-    "save_fig(fig_all, f'plots/experiments/{exp_name}_all.png', extension='png')\n",
-    "save_fig(fig_res, f'plots/experiments/{exp_name}_res.png', extension='png')\n",
-    "save_fig(fig_pos, f'plots/experiments/{exp_name}_pos.png', extension='png')\n",
-    "save_fig(fig_df,  f'plots/experiments/{exp_name}_df.png', extension='png')"
+    "save_fig(fig_all, f'plots/experiments/{exp_name}_all.png')\n",
+    "save_fig(fig_res, f'plots/experiments/{exp_name}_res.png')\n",
+    "save_fig(fig_pos, f'plots/experiments/{exp_name}_pos.png')\n",
+    "save_fig(fig_df,  f'plots/experiments/{exp_name}_df.png')"
    ]
   },
   {
