--- a/notebooks/Theory.ipynb
+++ b/notebooks/Theory.ipynb
@@ -191,6 +191,89 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Angle stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs = 1000\n",
+    "duration = 0.3\n",
+    "f = 12\n",
+    "phase = - np.pi/2\n",
+    "times = np.arange(0, duration, step=1/fs)\n",
+    "signal = np.cos(2*np.pi*f*times + phase) # 90\n",
+    "plt.plot(signal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nmax = 1000\n",
+    "fft = np.fft.rfft(signal, n=nmax) / len(signal)\n",
+    "freq = np.fft.rfftfreq(n=nmax)\n",
+    "fig, axs = plt.subplots(2, 1, sharex=True)\n",
+    "axs[0].plot(freq, np.abs(fft))\n",
+    "#phase = np.unwrap(np.angle(fft))\n",
+    "phase = np.angle(fft)\n",
+    "axs[1].plot(freq, 180 * phase / np.pi)\n",
+    "axs[0].set_xlim(0.01, 0.02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freq_max = freq[np.argmax(np.abs(fft))]\n",
+    "period_max = 1/freq_max\n",
+    "duration = max(times)-min(times)\n",
+    "\n",
+    "n = duration // period_max\n",
+    "phase = duration - n*period_max\n",
+    "print(n, freq_max, phase)\n",
+    "print('total', n*period_max + phase)\n",
+    "print(duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import IPython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs = 44100\n",
+    "times = np.arange(0, 2, step=1/fs)\n",
+    "f1 = 500\n",
+    "f2 = 800\n",
+    "sine1 = np.sin(2*np.pi*f1*times)\n",
+    "sine2 = np.sin(2*np.pi*f2*times)\n",
+    "sine = sine1 + sine2\n",
+    "IPython.display.Audio(sine, rate=fs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
