--- a/notebooks/CleanupAnalysis.ipynb
+++ b/notebooks/CleanupAnalysis.ipynb
@@ -45,10 +45,11 @@
     "# new buzzer\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
-    "#motors = \"all45000\"\n",
-    "motors = 0\n",
+    "motors = \"all45000\"\n",
+    "#motors = 0\n",
     "\n",
-    "source = \"sweep_new\""
+    "source = \"sweep_new\"\n",
+    "fname = f'plots/experiments/{exp_name}_{motors}'"
    ]
   },
   {
@@ -90,11 +91,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting_tools import pcolorfast_custom\n",
+    "from plotting_tools import pcolorfast_custom, add_colorbar, save_fig\n",
     "fig, ax = plt.subplots()\n",
-    "pcolorfast_custom(ax, data.seconds, freqs, spec[:, 0, :])\n",
-    "ax.set_xlabel('time')\n",
-    "ax.set_ylabel('frequency')"
+    "fig.set_size_inches(5, 3)\n",
+    "im = pcolorfast_custom(ax, data.seconds, freqs, np.log10(spec[:, 0, :]), vmin=1e-5)\n",
+    "add_colorbar(fig, ax, im)\n",
+    "xticks = [0, 5, 10]\n",
+    "yticks = [3000, 4000, 5000]\n",
+    "ax.set_xticks(xticks)\n",
+    "ax.set_xticklabels(xticks)\n",
+    "ax.set_yticks(yticks)\n",
+    "ax.set_yticklabels(yticks)\n",
+    "ax.set_xlabel('time [s]')\n",
+    "ax.set_ylabel('frequency [Hz]')\n",
+    "save_fig(fig, f'{fname}_spec.png')"
    ]
   },
   {
@@ -117,6 +127,27 @@
     "    exp_name, mic_type, motors, appendix=\"_raw\"\n",
     ")\n",
     "data_collector.remove_nan_rows(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plotting_tools import plot_df_matrix, save_fig\n",
+    "\n",
+    "print(data_collector.df)\n",
+    "\n",
+    "matrix, dists, freqs = data_collector.get_df_matrix()\n",
+    "print(matrix.shape, dists.shape, freqs.shape)\n",
+    "fig, axs = plt.subplots(1, matrix.shape[0])\n",
+    "fig.set_size_inches(5 * matrix.shape[0], 5)\n",
+    "for i in range(matrix.shape[0]):\n",
+    "    plot_df_matrix(dists, freqs, matrix[i], ax=axs[i])\n",
+    "    axs[i].set_title(f\"mic{i}\")\n",
+    "axs[0].set_ylabel('raw matrix\\n frequency [Hz]')\n",
+    "save_fig(fig, f'{fname}_raw_matrix.png')"
    ]
   },
   {
@@ -151,14 +182,16 @@
     "\n",
     "def plot_current_df():\n",
     "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(10, 5)\n",
+    "    fig.set_size_inches(5, 5)\n",
     "    sns.scatterplot(\n",
-    "        data=data_collector.df, x=\"frequency\", y=\"magnitude\", hue=\"distance\", linewidth=0\n",
+    "        data=data_collector.df, x=\"frequency\", y=\"magnitude\", hue=\"mic\", linewidth=0,\n",
+    "        cmap='tab10'\n",
     "    )\n",
     "    ax.set_yscale('log')\n",
     "    min_y = max(data_collector.df.magnitude.min(), 1e-2)\n",
     "    max_y = min(data_collector.df.magnitude.max(), 200)\n",
-    "    ax.set_ylim(min_y, max_y)"
+    "    ax.set_ylim(min_y, max_y)\n",
+    "    ax.legend(loc='lower center', ncol=1)"
    ]
   },
   {
@@ -235,7 +268,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotting_tools import plot_df_matrix\n",
     "from data_collector import prune_df_matrix\n",
     "\n",
     "matrix, dists, freqs = data_collector.get_df_matrix()\n",
@@ -243,14 +275,19 @@
     "\n",
     "fig, axs = plt.subplots(1, matrix.shape[0])\n",
     "fig.set_size_inches(5 * matrix.shape[0], 5)\n",
+    "for i in range(matrix.shape[0]):\n",
+    "    plot_df_matrix(dists, freqs, matrix[i], ax=axs[i])\n",
+    "    axs[i].set_title(f\"mic{i}\")\n",
+    "axs[0].set_ylabel('cleaned matrix\\n frequency [Hz]')\n",
+    "save_fig(fig, f'{fname}_cleaned_matrix.png')\n",
+    "\n",
     "fig_pruned, axs_pruned = plt.subplots(1, matrix.shape[0])\n",
     "fig_pruned.set_size_inches(5 * matrix.shape[0], 5)\n",
-    "for i, (ax, ax_pruned) in enumerate(zip(axs, axs_pruned)):\n",
-    "    plot_df_matrix(dists, freqs, matrix[i], ax=ax)\n",
-    "    ax.set_ylabel('raw \\n frequency [Hz]')\n",
-    "    plot_df_matrix(dists, freqs_pruned, matrix_pruned[i], ax=ax_pruned)\n",
-    "    ax_pruned.set_ylabel('pruned \\n frequency [Hz]')\n",
-    "    ax.set_title(f\"mic{i}\")"
+    "for i in range(matrix.shape[0]):\n",
+    "    plot_df_matrix(dists, freqs_pruned, matrix_pruned[i], ax=axs_pruned[i])\n",
+    "    axs_pruned[i].set_title(f\"mic{i}\")\n",
+    "axs_pruned[0].set_ylabel('pruned matrix\\n frequency [Hz]')\n",
+    "save_fig(fig, f'{fname}_pruned_matrix.png')"
    ]
   },
   {
