Update DOA experiments

--- a/notebooks/DynamicAnalysis.ipynb
+++ b/notebooks/DynamicAnalysis.ipynb
@@ -110,7 +110,8 @@
     "from dynamic_analysis import add_pose_to_df\n",
     "\n",
     "distance = None\n",
-    "#exp_name = '2020_10_30_dynamic'; degree=0; start_idx = 0# correct mic positions, but only one degree\n",
+    "\n",
+    "exp_name = '2020_10_30_dynamic'; degree=0; start_idx = 0# correct mic positions, but only one degree\n",
     "#exp_name = '2020_10_30_dynamic_test'; degree=0; start_idx=0 #degree=90; \n",
     "#exp_name = '2020_10_30_dynamic_move'; degree=0; start_idx=0\n",
     "#exp_name = '2020_11_03_sweep_old'; degree=90; start_idx = 20\n",
@@ -126,8 +127,8 @@
     "#exp_name = '2020_11_13_speaker360'; degree=360; start_idx = 20\n",
     "#degree_offset = 230 #\n",
     "\n",
-    "exp_name = '2020_11_23_wall2'; degree=360; start_idx = 20; distance=0\n",
-    "degree_offset = 0 #\n",
+    "#exp_name = '2020_11_23_wall2'; degree=360; start_idx = 20; distance=0\n",
+    "#degree_offset = 0 #\n",
     "\n",
     "params = dict(\n",
     "    distance = distance,\n",
