--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -1138,7 +1138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Noise study\n",
+    "# Noise study\n",
     "\n",
     "All below depends on the nominal distance from the wall. We could make median performance vs. distance error and distance from wall plots, and repeat the same plot at different amplitude noises.\n",
     "\n",
@@ -1164,6 +1164,7 @@
    "outputs": [],
    "source": [
     "from simulation import get_deltas_from_global\n",
+    "from plotting_tools import save_fig\n",
     "\n",
     "mic_idx = 3\n",
     "frequencies = np.linspace(1000, 5000, 100)\n",
@@ -1286,10 +1287,10 @@
     "save_fig(fig, f\"plots/simulation/{name}_median.pdf\")\n",
     "for method, sub_df in results_df.groupby(\"method\"):\n",
     "    fig, axs = plot_error_distance(\n",
-    "        sub_df, column=\"sigmay\", name=name + \" $\\\\sigma_y$ [-]\", aggfunc=np.nanmedian\n",
+    "        sub_df, column=\"sigmay\", name=name + \" $\\\\sigma_y$ [-]\", aggfunc=np.nanmean\n",
     "    )\n",
     "    plot_cos_amplitudes(axs, results_df)\n",
-    "    save_fig(fig, f\"plots/simulation/{name}_{method}_median.pdf\")\n",
+    "    save_fig(fig, f\"plots/simulation/{name}_{method}_mean.pdf\")\n",
     "\n",
     "    fig, axs = plot_error_distance(\n",
     "        sub_df, column=\"sigmay\", name=name + \" $\\\\sigma_y$ [-]\", aggfunc=np.nanstd\n",
@@ -1313,26 +1314,13 @@
     "name = \"delta_noise\"\n",
     "results_df = pd.read_pickle(f\"results/simulation/{name}.pkl\")\n",
     "\n",
-    "fig, axs = plot_error_distance(\n",
-    "    results_df, column=\"sigmadelta\", name=name + \" [cm]\", aggfunc=np.nanmean\n",
-    ")\n",
-    "#save_fig(fig, f\"plots/simulation/{name}_median.pdf\")\n",
-    "fig, axs = plot_error_distance(\n",
-    "    results_df, column=\"sigmadelta\", name=name + \" [cm]\", aggfunc=np.nanmedian\n",
-    ")\n",
-    "save_fig(fig, f\"plots/simulation/{name}_median.pdf\")\n",
-    "fig, axs = plot_error_distance(\n",
-    "    results_df, column=\"sigmadelta\", name=name + \" [cm]\", aggfunc=np.nanstd\n",
-    ")\n",
-    "save_fig(fig, f\"plots/simulation/{name}_std.pdf\")\n",
-    "\n",
     "for method, sub_df in results_df.groupby(\"method\"):\n",
-    "\n",
+    "    print(method, labels[method])\n",
     "    fig, axs = plot_error_distance(\n",
-    "        sub_df, column=\"sigmadelta\", name=name + \" [cm]\", aggfunc=np.nanmedian\n",
+    "        sub_df, column=\"sigmadelta\", name=name + \" [cm]\", aggfunc=np.nanmean\n",
     "    )\n",
-    "    axs[0, 0].set_title(f\"median error of {labels[method]}\")\n",
-    "    save_fig(fig, f\"plots/simulation/{name}_{method}_median.pdf\")\n",
+    "    axs[0, 0].set_title(f\"mean error of {labels[method]}\")\n",
+    "    save_fig(fig, f\"plots/simulation/{name}_{method}_mean.pdf\")\n",
     "\n",
     "    fig, axs = plot_error_distance(\n",
     "        sub_df, column=\"sigmadelta\", name=name + \" [cm]\", aggfunc=np.nanstd\n",
@@ -1375,6 +1363,8 @@
     "vmin = results_df.error.min() / 2\n",
     "vmax = results_df.error.max() / 2\n",
     "for method, sub_df in results_df.groupby(\"method\"):\n",
+    "    if method == 'cost':\n",
+    "        continue\n",
     "    fig, axs = plot_error_distance(\n",
     "        sub_df,\n",
     "        column=\"sigmaf\",\n",
